# temp-mails

./: .gitignore  LICENSE  README.md  changelog  convert_imports_to_map.py  pyproject.toml
examples/: choose_random_email.py
examples/benchmark/: benchmark.py  benchmark_results.json  parse_results.py
temp_mails/: __init__.py  _constructors.py  providers.py
temp_mails/providers/: adguard_com.py  anonymmail_net.py  burnermailbox_com.py  byom_de.py  cloudtempmail_com.py  correotemporal_org.py  crazymailing_com.py  cryptogmail_com.py  dismailbox_com.py  disposableemail_co.py  disposablemail_com.py  dropmail_me.py  emaildashfake_com.py  emaildashfree_online.py  emailfake_com.py  emailondeck_com.py  emailtenmin_com.py  etempmail_com.py  etempmail_net.py  expressinboxhub_com.py  eyepaste_com.py  eztempmail_com.py  fakemail_net.py  fakemailgenerator_com.py  (+116 more)
tests/: Temporarymail_com.py  adguard_com.py  anonymmail_net.py  burnermailbox_com.py  byom_de.py  cloudtempmail_com.py  correotemporal_org.py  crazymailing_com.py  cryptogmail_com.py  dismailbox_com.py  disposableemail_co.py  disposableemail_com.py  disposablemail_com.py  dropmail_me.py  emaildashfake_com.py  emaildashfree_online.py  emailfake_com.py  emailondeck_com.py  emailtenmin_com.py  etempmail_com.py  etempmail_net.py  expressinboxhub_com.py  eyepaste_com.py  eztempmail_com.py  fakemail_net.py  fakemailgenerator_com.py  fakermail_com.py  fmail_sbs.py  fumail_co.py  generator_email.py  getnada_cc.py  gmailcity_com.py  guerillamail_com.py  harakirimail_com.py  haribu_net.py  inboxes_com.py  inboxkitten_com.py  incognitomail_co.py  internxt_com.py  internxt_doctcom.py  (+90 more)
